objects/SPG_Referral__c.object
<CustomObject>
    <description>US 3852551: DO NOT MODIFY/DELETE. CI Referral package object. For divisions to submit cross-divisional referrals.</description>
    <fields>
        <fullName>Account_CAPIQ_ID__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Auto-populates with the CAPIQ ID of the existing account.</description>
        <label>Account CAPIQ ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>US 3974170: DO NOT MODIFY/DELETE. CI Referral package field. Picklist values to match approved values for country values.</description>
        <label>Account Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIRef_SPG_Referral_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Created for informatica integration mapping. Formula to return text value of account name in account__c field or lead__c field for lead transfers.</description>
        <formula>IF(ISBLANK(Account__c), Company_Name__c, Account__r.Name)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State_Province__c</fullName>
        <description>US-3974170: DO NOT MODIFY/DELETE. CIRef package field. State/province picklists based on divisional org state values.</description>
        <label>Account State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>CI_Ref_SPG_Referral_State_Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Account will be pre-populated, represents the existing client the user is referring to other divisions.</description>
        <inlineHelpText>The account you are referring to other divisions.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPG Referrals</relationshipLabel>
        <relationshipName>SPG_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automotive_Referral__c</fullName>
        <description>Interested product routing for IHS Automotive division.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c,&quot;Automotive: Polk Automotive Solutions&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Automotive: Planning Solutions&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Automotive: Market Reporting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Automotive: Advisory&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Automotive: Vehicle Performance &amp; Compliance (VPAC)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Automotive: Powertrain Sales Forecast&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Automotive: Powertrain Production Forecast&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;Automotive&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to Automotive..</inlineHelpText>
        <label>Automotive Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMS_Product_Design_Referral__c</fullName>
        <description>Interested product routing for IHS CMS/Product design division.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c,&quot;Product Design: Haystack&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Product Design: Goldfire&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Product Design: Parts&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Product Design: UK construction/Local&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Product Design: Engineering Workbench &amp; Standards&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;CMS/Product Design&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to CMS/Product Design.</inlineHelpText>
        <label>CMS/Product Design Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Pre-filled with company name on lead and mapped to same field in receiving division.</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <description>Company type from lead form. Used for lead transfer only.</description>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Academic Institution</fullName>
                </value>
                <value>
                    <fullName>Accounting/Auditing Firm</fullName>
                </value>
                <value>
                    <fullName>Agricultural Bank/Agricultural Coop</fullName>
                </value>
                <value>
                    <fullName>Arts Institution</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Asset Management - High Wealth Individuals</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Asset Owner</fullName>
                </value>
                <value>
                    <fullName>Assets/Products</fullName>
                </value>
                <value>
                    <fullName>Auditors/Accounting</fullName>
                </value>
                <value>
                    <fullName>Automobiles and Components</fullName>
                </value>
                <value>
                    <fullName>Bank - Commercial</fullName>
                </value>
                <value>
                    <fullName>Bank - Development</fullName>
                </value>
                <value>
                    <fullName>Bank Holdings</fullName>
                </value>
                <value>
                    <fullName>Bank - Insurance</fullName>
                </value>
                <value>
                    <fullName>Bank - Investment</fullName>
                </value>
                <value>
                    <fullName>Bank - Other</fullName>
                </value>
                <value>
                    <fullName>Bank - Prime Brokerage</fullName>
                </value>
                <value>
                    <fullName>Bank - Regional (Tier 1)</fullName>
                </value>
                <value>
                    <fullName>Bank - Regional (Tier 2)</fullName>
                </value>
                <value>
                    <fullName>Bank - Retail</fullName>
                </value>
                <value>
                    <fullName>Bank - Third Party Administrator</fullName>
                </value>
                <value>
                    <fullName>Bank Third Party Fund Administrator</fullName>
                </value>
                <value>
                    <fullName>Bank - Trust</fullName>
                </value>
                <value>
                    <fullName>Bond Insurer</fullName>
                </value>
                <value>
                    <fullName>Broker/Dealer</fullName>
                </value>
                <value>
                    <fullName>Capital Goods</fullName>
                </value>
                <value>
                    <fullName>Clearing Firm</fullName>
                </value>
                <value>
                    <fullName>Commercial Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <description>US-4086772: DO NOT MODIFY OR DELETE. City of the contact for referral leads (autopopulated by flow when submitted from account) and city of lead for lead transfers. Pre-filled on both contact and lead. Full address is needed for lead conversion of referrals in some orgs.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <description>US-3974170: DO NOT MODIFY/DELETE. CI Referral package field. Country of the contact for referral leads (auto-populated by flow on account referrals) and Country of lead for lead transfers. Standard list of countries across divisional orgs.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIRef_SPG_Referral_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Email of the contact (auto-populated by flow if referral is from account) for referral leads and email of lead for lead transfers.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Created for Informatica integration. Formula field to extract contact or lead first name for mapping to divisional leads object.</description>
        <formula>IF(ISBLANK(Contact__c),Lead__r.FirstName, Contact__r.FirstName)</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Created for Informatica integration. Formula field to extract contact or lead last name for mapping to divisional leads object.</description>
        <formula>IF(ISBLANK(Contact__c), Lead__r.LastName, Contact__r.LastName)</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Business or mobile phone of the contact (auto-populated by flow from account) for referral leads and phone of lead for lead transfers.</description>
        <inlineHelpText>Pre-fills the contact&apos;s phone. If phone is blank, mobile number is pre-populated on the form.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Postal_Code__c</fullName>
        <description>US-4086772: DO NOT MODIFY OR DELETE. Postal code of the contact for referral leads (auto-populated by flow on account referral). Pre-fills with mailing address on contacts. Full address is needed for lead conversion of referrals in some orgs. Not part of lead transfers.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State_Province__c</fullName>
        <description>US-3974170: DO NOT MODIFY/DELETE. CI Referral package field. State/Province of the contact for referral leads (auto-populated by flow from account referral) and state/province of lead for lead transfers. Standard list of contact state/province across divisions.</description>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>CI_Ref_SPG_Referral_State_Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <description>US-4086772: DO NOT MODIFY OR DELETE. Street of the contact for referral leads (auto-populated by flow if submitted from an account). Pre-filled from contact mailing street. Not part of lead transfers.</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Title of the contact for referral leads and title of lead for lead transfers.</description>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Users can search, create, and enter a contact via this field. If they are creating the referal from a contact, then this field will be pre-populated.</description>
        <inlineHelpText>The contact divisions should reach out to.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Alias</field>
                <operation>contains</operation>
                <value>merge</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPG Referrals</relationshipLabel>
        <relationshipName>SPG_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Status_Count__c</fullName>
        <description>Roll-up summary counts the number of Routed Referral leads with status = &quot;Created&quot;. If its atleast one record, that means the referral is partially routed since not all leads have been routed. If the count is 0, that means all referrals are routed. This calculation is used to set status and shouldn&apos;t be visible to end users.</description>
        <label>Created Status Count</label>
        <summaryFilterItems>
            <field>SPG_Referral_Lead__c.Routing_Status__c</field>
            <operation>equals</operation>
            <value>Created, Transferred</value>
        </summaryFilterItems>
        <summaryForeignKey>SPG_Referral_Lead__c.SPG_Referral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Disqualified_Comments__c</fullName>
        <description>For pre-loaded referrals, account managers can disqualify the lead to prevent them from being routed and closing them out.</description>
        <inlineHelpText>If the pre-loaded referral is disqualified from being routed to division(s), then a comment is required.</inlineHelpText>
        <label>Disqualified Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Sent_From__c</fullName>
        <description>Tracks the source division of the referral or transfer lead, specifically for IHS where multiple divisions exists within one org.</description>
        <inlineHelpText>Includes the name of the division sending the lead to another division(s).</inlineHelpText>
        <label>Division Sent From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>CMS/Product Design</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>ENR</fullName>
                    <isActive>false</isActive>
                    <label>ENR</label>
                </value>
                <value>
                    <fullName>Indices</fullName>
                    <isActive>false</isActive>
                    <label>Indices</label>
                </value>
                <value>
                    <fullName>MI</fullName>
                    <isActive>false</isActive>
                    <label>MI</label>
                </value>
                <value>
                    <fullName>Platts</fullName>
                    <isActive>false</isActive>
                    <label>Platts</label>
                </value>
                <value>
                    <fullName>Ratings</fullName>
                    <isActive>false</isActive>
                    <label>Ratings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>US-3855232: DO NOT MODIFY/DELETE. CI Referral package field. List of divisions to filter down interested products.</description>
        <inlineHelpText>Select a division or &quot;Multiple&quot; if the referral should be sent to more than one division. Selecting different divisions will clear out the interested products you&apos;ve already chosen.</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>CMS/Product Design</fullName>
                </value>
                <value>
                    <fullName>ESG CSA</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Indices</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>Ratings</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>ENR</fullName>
                    <isActive>false</isActive>
                    <label>ENR</label>
                </value>
                <value>
                    <fullName>Platts</fullName>
                    <isActive>false</isActive>
                    <label>Platts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENR_Referral__c</fullName>
        <description>Interested product routing for IHS ENR division.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c,&quot;ENR: AGRI Consulting - Agribusiness Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: CSG Consulting - Climate and Sustainability Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: OMDC Consulting - Oil, Midstream, Downstream and Chemicals Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: Upstream Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: Upstream&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: AGRI - Agribusiness&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: CSG - Climate and Sustainability&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: OMDC - Oil, Midstream, Downstream and Chemicals&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;ENR&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to ENR.</inlineHelpText>
        <label>ENR Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Services_Referral__c</fullName>
        <description>Interested product routing for Financial Services division.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c,&quot;FS: Markit Digital&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: Markit Indices&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: Credit &amp; Risk (Financial Risk Analytics)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: Data, Valuations &amp; Analytics (Pricing, Vals, Ref Data, Equities)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: Network &amp; Reg - (Brokerage, Research, Sales &amp; Trading)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: Network &amp; Reg (KYC, KY3P, Tax, Corp Actions)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: RA&amp;SS - ECR (Economics, Country Risk, Industry, Supply Chain, PMI)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: RA&amp;SS - Maritime &amp; Trade (GTAS, MIRS)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: Solutions (Private Markets, iLEVEL, WSO, Debt Domain)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;FS: RA&amp;SS - Issuer Solutions (Investor Relations)&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;Financial Services&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to Financial Services.</inlineHelpText>
        <label>Financial Services Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidance__c</fullName>
        <defaultValue>&quot;Search or create contact. Enter contact email, phone, and/or title directly on the contact. This info will be automatically added to the referral.&quot;</defaultValue>
        <description>US-3852477: DO NOT MODIFY/DELETE. CI Referral package field. Guidance for divisional account managers to enter contact information from account page. Field will not be editable.</description>
        <label>Guidance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHS_HR_Sub_Business_Line__c</fullName>
        <description>US-4808045: Migrates IHS HR Sub Business Line from user record to SPG Referral when created.</description>
        <inlineHelpText>Tracks HR Sub Business Line for IHS divisions only.</inlineHelpText>
        <label>IHS HR Sub Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHS_Subject_Matter_Expert__c</fullName>
        <description>US-4585846: Tags SME from account team to referral.</description>
        <inlineHelpText>Tracks SME on account team.</inlineHelpText>
        <label>IHS Subject Matter Expert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indices_Referral__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. If checked, the interested product type has a field value to indicate that this referral should be routed to Indices.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c, &quot;Indices: General Interest&quot;),
INCLUDES(Interested_Product_Type__c, &quot;Indices: ESG&quot;),
INCLUDES(Interested_Product_Type__c, &quot;Indices: Markit Indices&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;Indices&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to Indices.</inlineHelpText>
        <label>Indices Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>US-3974170: DO NOT MODIFY/DELETE. CI Referral package field. Standard industry types related to referral accounts. Used for reporting purposes.</description>
        <inlineHelpText>Select an industry for the referred account.</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Discretionary</fullName>
                </value>
                <value>
                    <fullName>Consumer Staples</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Industrials</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_Product_Type__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Users enter one or multiple product types based on the account&apos;s interest. We will use this field to determine which division(s) should receive the referral.</description>
        <inlineHelpText>Select all the products the client is interested in. When &quot;Multiple&quot; is selected in the division field, you can select products from multiple divisions.</inlineHelpText>
        <label>Interested Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>CIRef_SPG_Referral_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>Lead job function from marketing forms.</description>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Acct/Back Office/Settlement</fullName>
                </value>
                <value>
                    <fullName>Actuary</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Analyst/Associate</fullName>
                </value>
                <value>
                    <fullName>Analyst - Credit/Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Analyst - Credit/Fixed Income (Sell-Side)</fullName>
                </value>
                <value>
                    <fullName>Analyst - Equity</fullName>
                </value>
                <value>
                    <fullName>Analyst - Funds</fullName>
                </value>
                <value>
                    <fullName>Asset/Portfolio/Fund Mgt</fullName>
                </value>
                <value>
                    <fullName>Asset consultant</fullName>
                </value>
                <value>
                    <fullName>Asset Services</fullName>
                </value>
                <value>
                    <fullName>Attorney/Partner</fullName>
                </value>
                <value>
                    <fullName>Audit/Accounting</fullName>
                </value>
                <value>
                    <fullName>Banking - Commercial Lending</fullName>
                </value>
                <value>
                    <fullName>Banking - General</fullName>
                </value>
                <value>
                    <fullName>Banking - Investment</fullName>
                </value>
                <value>
                    <fullName>Banking - Private/Wealth Mgt</fullName>
                </value>
                <value>
                    <fullName>Board Member/Trustee</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Business Development/Relationship Management</fullName>
                </value>
                <value>
                    <fullName>Capital Markets (IBD)</fullName>
                </value>
                <value>
                    <fullName>Commodities Pricing</fullName>
                </value>
                <value>
                    <fullName>Competitive Intelligence</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Conflict Resolution</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Campaign_Source__c</fullName>
        <description>Pre-filled with the primary campaign name on lead being transferred.</description>
        <inlineHelpText>Includes the synergy campaign linked for referrals and primary campaign name for lead transfers.</inlineHelpText>
        <label>Synergy Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For transfer leads and re-referrals, tracks the lead to be transferred.</description>
        <inlineHelpText>Includes the lead that should be transferred.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SPG Referrals</relationshipLabel>
        <relationshipName>SPG_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MI_Referral__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. If checked, the interested product type has a field value to indicate that this referral should be routed to MI.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c,&quot;MI: Credit Products&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: Capital IQ Pro&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: Feeds (non-Rating Xpress (RX))&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: 451&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: Panjiva&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: MMD&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: General Interest&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: ESG (Desktop, Feeds, Reports)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: ESG Data/Trucost (Desktop, Feeds, Reports)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: ESG Data/Trucost/Benchmarking (Desktop, Feeds, Reports)&quot;),
INCLUDES(Interested_Product_Type__c,&quot;MI: ChartIQ&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;MI&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to MI.</inlineHelpText>
        <label>MI Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. Users enter any notes on the referral they would like to share with division(s).</description>
        <inlineHelpText>Enter any notes you want to share with divisions to follow up on the referral.</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platts_Referral__c</fullName>
        <description>US-3852551: DO NOT MODIFY/DELETE. CI Referral package field. If checked, the interested product type has a field value to indicate that this referral should be routed to Platts.</description>
        <formula>OR(
INCLUDES(Interested_Product_Type__c,&quot;Platts: Agriculture&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Americas Gas and Power&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Coal&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Crude&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Energy Transition&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Euro Gas and Power&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Liquefied Natural Gas&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Oil&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Petrochemicals&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Refined&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Shipping&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Steel&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: General Interest&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Nuclear&quot;),
INCLUDES(Interested_Product_Type__c,&quot;Platts: Metals&quot;),

INCLUDES(Interested_Product_Type__c,&quot;ENR: AGRI Consulting - Agribusiness Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: CSG Consulting - Climate and Sustainability Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: OMDC Consulting - Oil, Midstream, Downstream and Chemicals Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: Upstream Consulting&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: Upstream&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: AGRI - Agribusiness&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: CSG - Climate and Sustainability&quot;),
INCLUDES(Interested_Product_Type__c,&quot;ENR: OMDC - Oil, Midstream, Downstream and Chemicals&quot;),
INCLUDES(Transfer_Lead_To__c, &quot;CI&quot;),

INCLUDES(Transfer_Lead_To__c, &quot;Platts&quot;)
)</formula>
        <inlineHelpText>If checked, this referral was determined to be routed to Platts.</inlineHelpText>
        <label>CI Division</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>